# ChangeLog for dev-ruby/poltergeist
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*poltergeist-1.5.1 (06 Jun 2014)

  06 Jun 2014; Hans de Graaff <graaff@gentoo.org> +poltergeist-1.5.1.ebuild:
  Version bump.

*poltergeist-1.5.0 (13 Dec 2013)

  13 Dec 2013; Hans de Graaff <graaff@gentoo.org> +poltergeist-1.5.0.ebuild:
  Version bump.

*poltergeist-1.4.1-r1 (06 Dec 2013)

  06 Dec 2013; Hans de Graaff <graaff@gentoo.org> -poltergeist-1.4.1.ebuild,
  +poltergeist-1.4.1-r1.ebuild:
  Make capybara dependency more lenient to include all 2.x versions.

  04 Dec 2013; Hans de Graaff <graaff@gentoo.org> poltergeist-1.4.1.ebuild:
  Add missing websocket-driver dependency.

*poltergeist-1.4.1 (04 Dec 2013)

  04 Dec 2013; Hans de Graaff <graaff@gentoo.org> +poltergeist-1.4.1.ebuild,
  +metadata.xml:
  Initial import.
